--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -1,11 +1,11 @@
-.selection {
+.options {
     font-size: 1.6rem;
     text-align: center;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
-    max-width: 70rem;
+    max-width: 50rem;
     margin: 0 auto;
     margin-top: 1rem;
 
