--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,4 @@
 body {
-    // background-color: rgb(168, 168, 168);
     font-family: 'Barlow', sans-serif;
     line-height: 1.5;
     background-attachment: fixed;
@@ -10,7 +9,7 @@ body {
 
     @include respond(tablet-portrait) {
         background-attachment: scroll;
-        background-color: #222222;
+        background-color: #000;
     }
 }
 
@@ -30,7 +29,7 @@ body {
     font-size: 2.5rem;
     max-width: 114rem;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 2rem;
     padding: 2rem 0;
     text-align: center;
@@ -45,3 +44,21 @@ body {
 // .Thunder{
 //     color: yellow
 // }
+
+.instructions {
+    color: #fff;
+    font-size: 1.8rem;
+    text-align: center;
+    text-shadow: 0 1.5rem 3rem rgb(0, 0, 0);
+    padding: 4rem 0 0;
+
+    @include respond(tablet-portrait) {
+        width: 50rem;
+        margin: 0 auto;
+    }
+
+    @include respond(phone) {
+        width: 30rem;
+        margin: 0 auto;
+    }
+}
