--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -1,7 +1,6 @@
 .options {
     font-size: 1.6rem;
     text-align: center;
-
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
@@ -35,7 +34,7 @@
         width: 100%;
 
         &:focus {
-            outline-color: #27fb95;
+            outline-color: $primary-color;
             box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
             transition: all .2s;
         }
@@ -44,7 +43,7 @@
     &__btn {
         &:link,
         &:visited {
-            border: 1px solid #fff;
+            border: 2px solid #fff;
             color: #fff;
             background-color: #000;
 
@@ -54,7 +53,7 @@
             transition: all .3s;
 
             &:hover {
-                border: 1px solid $primary-color;
+                border: 2px solid $primary-color;
                 // color: $primary-color;
             }
         }
