--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1,3 +1,24 @@
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    display: none; } }
+
 *,
 *::after,
 *::before {
@@ -75,6 +96,20 @@ body {
       width: 30rem;
       margin: 0 auto; } }
 
+.fadeUp {
+  animation-name: fadeUp;
+  animation-duration: .4s;
+  animation-timing-function: ease-in-out; }
+
+.fadeIn {
+  animation-name: fadeIn;
+  animation-duration: .2s;
+  animation-timing-function: ease-in-out; }
+
+.fadeOut {
+  animation-name: fadeOut;
+  animation-duration: .4s; }
+
 .options {
   font-size: 1.6rem;
   text-align: center;
@@ -88,7 +123,7 @@ body {
     .options {
       grid-template-columns: repeat(1, 1fr);
       max-width: 75%; } }
-  .options__list {
+  .options__monster-list {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -103,11 +138,11 @@ body {
     padding: .6rem 1.4rem .5rem .8rem;
     text-transform: capitalize;
     width: 100%; }
-    .options__list:focus {
+    .options__monster-list:focus {
       outline-color: #76bb3e;
       box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
       transition: all .2s; }
-  .options__btn:link, .options__btn:visited {
+  .options__monster-btn:link, .options__monster-btn:visited {
     border: 2px solid #fff;
     color: #fff;
     background-color: #000;
@@ -115,7 +150,7 @@ body {
     padding: .6rem 1.8rem;
     text-decoration: none;
     transition: all .3s; }
-    .options__btn:link:hover, .options__btn:visited:hover {
+    .options__monster-btn:link:hover, .options__monster-btn:visited:hover {
       border: 2px solid #76bb3e; }
 
 .modal-container {
@@ -128,11 +163,14 @@ body {
   .modal-container__toggle {
     font-size: 3.8rem;
     position: fixed;
-    top: 2rem;
-    right: 6rem;
+    top: 0;
+    right: 10rem;
     z-index: 10000; }
+    @media only screen and (max-width: 56.25em) {
+      .modal-container__toggle {
+        right: 1rem; } }
     .modal-container__toggle--icon {
-      color: #fff;
+      color: #bdff88;
       text-shadow: 0px 5px 10px #000; }
     .modal-container__toggle:hover {
       cursor: pointer; }
@@ -158,6 +196,9 @@ body {
   margin: 0 auto;
   max-width: 114rem; }
   .monster__icons {
+    animation-name: fadeIn;
+    animation-duration: .4s;
+    animation-timing-function: ease-in-out;
     max-width: 114rem;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -204,6 +245,9 @@ body {
       .monster__details {
         grid-template-columns: repeat(1, 1fr);
         max-width: 50rem; } }
+    @media only screen and (max-width: 28.75em) {
+      .monster__details--render {
+        padding: 0 1rem; } }
     .monster__details--render-img {
       filter: drop-shadow(5px 5px 5px #222);
       display: block;
