--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,12 +9,17 @@
     &__toggle {
         font-size: 3.8rem;
         position: fixed;
-        top: 2rem;
-        right: 6rem;
+        top: 0;
+        right: 10rem;
         z-index: 10000;
 
+        @include respond(tablet-portrait) {
+            // top: -5rem;
+            right: 1rem;
+        }
+
         &--icon {
-            color: #fff;
+            color: $primary-color-light;
             text-shadow: 0px 5px 10px #000;
         }
 
