--- a/sass/components/_monster.scss
+++ b/sass/components/_monster.scss
@@ -4,6 +4,9 @@
 
     // ICONS
     &__icons {
+        animation-name: fadeIn;
+        animation-duration: .4s;
+        animation-timing-function: ease-in-out;
         max-width: 114rem;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
@@ -68,6 +71,10 @@
         }
 
         &--render {
+            @include respond(smaller-phone) {
+                padding: 0 1rem;
+            }
+
             &-img {
                 filter: drop-shadow(5px 5px 5px #222);
                 display: block;
