--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,10 @@
 @import "abstracts/variables";
 
 // BASE
+@import "base/animations";
 @import "base/base";
 @import "base/typography";
+@import "base/utilities";
 
 // COMPONENTS
 @import "components/input";
