--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,9 @@
 // COMPONENTS
 @import "components/input";
 @import "components/modal";
-@import "components/monster";
+@import "components/monster-box";
+@import "components/monster-icons";
 
 // LAYOUT
 @import "layout/footer";
+@import "layout/monster";
