--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -23,12 +23,20 @@
   to {
     transform: rotate(360deg); } }
 
+@keyframes monsterHeaderWidth {
+  from {
+    left: -170rem;
+    opacity: 0; }
+  to {
+    left: 0;
+    opacity: 1; } }
+
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: border-box; }
 
 html {
   font-size: 62.5%; }
@@ -49,13 +57,13 @@ html {
   background-color: #76bb3e; }
 
 body {
-  font-family: 'Barlow', sans-serif;
-  line-height: 1.5;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh; }
+  font-family: 'Barlow', sans-serif;
+  height: 100vh;
+  line-height: 1.5; }
   @media only screen and (max-width: 56.25em) {
     body {
       background-attachment: scroll;
@@ -70,21 +78,6 @@ body {
   padding-top: 2rem;
   padding-bottom: 2rem; }
 
-.secondary-heading {
-  color: #fff;
-  font-size: 2.5rem;
-  max-width: 114rem;
-  margin: 0 auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 2rem 0;
-  text-align: center;
-  text-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-  @media only screen and (max-width: 75em) {
-    .secondary-heading {
-      text-align: center;
-      margin: 2rem 0 2rem; } }
-
 .instructions {
   color: #fff;
   font-size: 1.8rem;
@@ -93,12 +86,32 @@ body {
   padding: 4rem 0 0; }
   @media only screen and (max-width: 56.25em) {
     .instructions {
-      width: 50rem;
-      margin: 0 auto; } }
+      margin: 0 auto;
+      width: 50rem; } }
   @media only screen and (max-width: 37.5em) {
     .instructions {
-      width: 30rem;
-      margin: 0 auto; } }
+      margin: 0 auto;
+      width: 30rem; } }
+
+.secondary-heading {
+  height: 80px; }
+  .secondary-heading--main {
+    color: #fff;
+    display: block;
+    font-size: 3rem;
+    padding-right: 4rem; }
+    @media only screen and (max-width: 37.5em) {
+      .secondary-heading--main {
+        font-size: 2.2rem;
+        padding-right: 2rem; } }
+  .secondary-heading--sub {
+    color: #76bb3e;
+    display: block;
+    font-size: 2rem;
+    padding-right: 4rem; }
+    @media only screen and (max-width: 37.5em) {
+      .secondary-heading--sub {
+        padding-right: 2rem; } }
 
 .fadeUp {
   animation-name: fadeUp;
@@ -130,6 +143,11 @@ body {
   border-right: 2.5px solid transparent;
   animation: loadingSpinner 0.7s linear infinite; }
 
+.monsterHeaderWidth {
+  animation-name: monsterHeaderWidth;
+  animation-duration: .5s;
+  animation-timing-function: ease-in-out; }
+
 .options {
   font-size: 1.6rem;
   text-align: center;
@@ -141,8 +159,10 @@ body {
   margin-top: 1rem; }
   @media only screen and (max-width: 56.25em) {
     .options {
-      grid-template-columns: repeat(1, 1fr);
-      max-width: 75%; } }
+      grid-template-columns: repeat(1, 1fr); } }
+  @media only screen and (max-width: 56.25em) {
+    .options {
+      padding: 0 6rem; } }
   .options__monster-list {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -212,108 +232,130 @@ body {
       .modal-container__img {
         width: 100% !important; } }
 
-.monster {
+.monster-box {
+  max-width: 114rem;
   margin: 0 auto;
-  max-width: 114rem; }
-  .monster__icons {
-    max-width: 114rem;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 3rem;
-    margin: 0 auto;
-    margin-top: 4rem; }
-    @media only screen and (max-width: 56.25em) {
-      .monster__icons {
-        grid-template-columns: repeat(3, 1fr);
-        padding: 0 6rem; } }
-    @media only screen and (max-width: 37.5em) {
-      .monster__icons {
-        grid-template-columns: repeat(2, 1fr);
-        padding: 0 4rem; } }
-    .monster__icons-box {
-      text-align: center; }
-      .monster__icons-box--heading {
-        color: white;
-        font-size: 1.8rem;
-        text-align: center;
-        margin-bottom: 1rem; }
-      .monster__icons-box--icon {
-        filter: drop-shadow(5px 5px 5px #222);
-        width: 100% !important;
-        transition: all .3s; }
-        .monster__icons-box--icon:hover {
-          cursor: pointer;
-          filter: drop-shadow(5px 5px 5px #335f0e); }
-        @media only screen and (max-width: 56.25em) {
-          .monster__icons-box--icon {
-            width: 70% !important; } }
-        @media only screen and (max-width: 37.5em) {
-          .monster__icons-box--icon {
-            width: 100% !important; } }
-  .monster__details {
+  color: #fff;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
+  margin: 0 auto;
+  margin-top: 5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .monster-box {
+      grid-template-columns: repeat(1, 1fr);
+      max-width: 50rem; } }
+  @media only screen and (max-width: 28.75em) {
+    .monster-box__render {
+      padding: 0 1rem; } }
+  .monster-box__render--img {
+    filter: drop-shadow(5px 5px 5px #222);
+    display: block;
+    width: 100%;
+    transition: all .3s; }
+    .monster-box__render--img:hover {
+      cursor: pointer;
+      filter: drop-shadow(5px 5px 5px #335f0e); }
+  .monster-box__info {
+    background-color: #222222;
+    border-radius: 2px;
+    display: block;
+    height: fit-content;
+    padding: 2rem; }
+  .monster-box__heading {
+    font-size: 3rem; }
+  .monster-box__text {
     color: #fff;
-    border-radius: 5px;
+    font-size: 1.7rem;
+    display: block; }
+    .monster-box__text-main {
+      color: #76bb3e; }
+    .monster-box__text:not(:last-child) {
+      margin-bottom: 2rem; }
+  .monster-box__grid-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 3rem;
+    grid-row-gap: 2rem;
+    color: #fff;
+    font-size: 1.7rem; }
+  .monster-box__list {
+    list-style: none; }
+  .monster-box__location {
+    max-width: 114rem;
     margin: 0 auto;
-    margin-top: 5rem; }
-    @media only screen and (max-width: 56.25em) {
-      .monster__details {
-        grid-template-columns: repeat(1, 1fr);
-        max-width: 50rem; } }
-    @media only screen and (max-width: 28.75em) {
-      .monster__details--render {
-        padding: 0 1rem; } }
-    .monster__details--render-img {
-      filter: drop-shadow(5px 5px 5px #222);
-      display: block;
-      width: 100%;
-      transition: all .3s; }
-      .monster__details--render-img:hover {
-        cursor: pointer;
-        filter: drop-shadow(5px 5px 5px #335f0e); }
-    .monster__details--info {
-      background-color: #222222;
-      display: block;
-      height: fit-content;
-      padding: 2rem; }
-    .monster__details--heading {
-      font-size: 3rem; }
-    .monster__details--text {
-      color: #fff;
-      font-size: 1.7rem;
-      display: block; }
-      .monster__details--text-main {
-        color: #76bb3e; }
-      .monster__details--text:not(:last-child) {
-        margin-bottom: 1rem; }
-  .monster__location {
     color: #fff;
     border-radius: 5px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem; }
     @media only screen and (max-width: 56.25em) {
-      .monster__location {
+      .monster-box__location {
         grid-template-columns: repeat(2, 1fr);
         padding: 0 6rem; } }
     @media only screen and (max-width: 37.5em) {
-      .monster__location {
-        padding: 0 1rem; } }
+      .monster-box__location {
+        padding: 0 2rem; } }
     @media only screen and (max-width: 20em) {
-      .monster__location {
+      .monster-box__location {
         grid-template-columns: repeat(1, 1fr); } }
-    .monster__location--name {
+    .monster-box__location--name {
       font-size: 1.8rem;
       padding-bottom: 1rem;
       text-align: center; }
-    .monster__location--img {
+    .monster-box__location--img {
       display: block;
       width: 100% !important;
       transition: all .3s; }
-      .monster__location--img:hover {
+      .monster-box__location--img:hover {
         cursor: pointer; }
+
+.monster__icons {
+  max-width: 114rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 3rem;
+  margin: 0 auto;
+  margin-top: 4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .monster__icons {
+      grid-template-columns: repeat(3, 1fr);
+      padding: 0 6rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .monster__icons {
+      grid-gap: 1rem;
+      grid-template-columns: repeat(2, 1fr);
+      padding: 0 1rem; } }
+  .monster__icons-box {
+    background-color: #333;
+    border-radius: 3px;
+    padding: 2rem;
+    text-align: center; }
+    .monster__icons-box--heading {
+      margin-bottom: 2rem; }
+      .monster__icons-box--heading-main {
+        color: #fff;
+        display: block;
+        font-size: 1.7rem;
+        text-align: left; }
+      .monster__icons-box--heading-sub {
+        color: #76bb3e;
+        display: block;
+        text-align: left; }
+    .monster__icons-box--icon {
+      filter: drop-shadow(5px 5px 5px #222);
+      margin: 0 auto;
+      width: 70% !important;
+      transition: all .3s; }
+      .monster__icons-box--icon:hover {
+        cursor: pointer;
+        filter: drop-shadow(5px 5px 5px #335f0e); }
+      @media only screen and (max-width: 56.25em) {
+        .monster__icons-box--icon {
+          width: 70% !important; } }
+      @media only screen and (max-width: 37.5em) {
+        .monster__icons-box--icon {
+          width: 100% !important; } }
 
 .footer {
   display: none;
@@ -325,3 +367,50 @@ body {
     .footer__text-link {
       color: #76bb3e;
       text-decoration: none; }
+
+.monster__heading-box-1, .monster__heading-box-2 {
+  align-items: center;
+  background-color: #222222;
+  border-radius: 3px;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  height: 90px; }
+  @supports (-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0)) {
+    .monster__heading-box-1, .monster__heading-box-2 {
+      -webkit-clip-path: polygon(0 0, 100% 0, 95% 100%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 95% 100%, 0 100%); } }
+  .monster__heading-box-1--icon, .monster__heading-box-2--icon {
+    padding-right: 2rem;
+    display: block;
+    height: 80px; }
+  @media only screen and (max-width: 37.5em) {
+    .monster__heading-box-1, .monster__heading-box-2 {
+      clip-path: none; } }
+
+.monster__heading-box-1 {
+  max-width: 750px;
+  margin-top: 5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .monster__heading-box-1 {
+      max-width: 450px; } }
+  @media only screen and (max-width: 37.5em) {
+    .monster__heading-box-1 {
+      max-width: 350px; } }
+  @media only screen and (max-width: 28.75em) {
+    .monster__heading-box-1 {
+      max-width: 300px; } }
+
+.monster__heading-box-2 {
+  max-width: 550px;
+  margin-top: 8rem;
+  margin-bottom: 3rem; }
+  @media only screen and (max-width: 56.25em) {
+    .monster__heading-box-2 {
+      max-width: 450px; } }
+  @media only screen and (max-width: 37.5em) {
+    .monster__heading-box-2 {
+      max-width: 280px; } }
+  @media only screen and (max-width: 28.75em) {
+    .monster__heading-box-2 {
+      max-width: 250px; } }
