added all current monsters, fixed typos

--- a/sass/components/_monster-box.scss
+++ b/sass/components/_monster-box.scss
@@ -76,7 +76,7 @@
     // monster__list
     &__list {
         list-style: none;
-        // text-transform: capitalize;
+        text-transform: capitalize;
     }
 
 
