--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,13 +8,13 @@
 }
 
 html {
-    font-size: 62.5%;
-    @include respond(phone) { font-size: 56.25%; };
-    @include respond(tablet-landscape) { font-size: 56.25%; };
-    @include respond(tablet-portrait) { font-size: 50%; };
-    @include respond(big-desktop) { font-size: 75%; };
+    scroll-behavior: smooth;
+    font-size: 62.5%; 
+    @include respond(older-phone) { font-size: 56.25%; }
+    @include respond(smaller-phone) { font-size: 56.25%; }
+    @include respond(tablet-landscape) { font-size: 56.25%; }
+    @include respond(tablet-portrait) { font-size: 50%; }
+    @include respond(big-desktop) { font-size: 75%; }
 }
 
-::selection {
-    background-color: $primary-color;
-}
+::selection { background-color: $primary-color; }
