--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,62 +1,39 @@
 body {
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     font-family: 'Barlow', sans-serif;
-    height: 100vh;
-    line-height: 1.5;
-
-    @include respond(tablet-portrait) {
-        background-attachment: scroll;
-        background-color: #000;
-    }
+    line-height: 1.7;
 }
 
 .primary-heading {
     color: #fff;
     font-size: 3.6rem;
     font-weight: 900;
-    text-align: center;
-    text-shadow: 0 1.5rem 3rem rgb(0, 0, 0);
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    @include respond(tablet-portrait) {
 
+    text-shadow: 0px 6px 8px #000;
+    // padding-top: 2rem;
+    padding-bottom: 4rem;
+
+    &--main {
+        display: block;
+    }
+
+    &--sub {
+        color: $primary-color;
+        display: block;
     }
 }
 
-.instructions {
-    color: #fff;
-    font-size: 1.8rem;
-    text-align: center;
-    text-shadow: 0 1.5rem 3rem rgb(0, 0, 0);
-    padding: 4rem 0 0;
-
-    @include respond(tablet-portrait) {
-        margin: 0 auto;
-        width: 50rem;
-    }
-
-    @include respond(phone) {
-        margin: 0 auto;
-        width: 30rem;
-    }
-}
 
 .secondary-heading {
     height: 80px;
-    // text-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); 
 
     &--main {
         color: #fff;
         display: block;
         font-size: 3rem;
         padding-right: 4rem;
-
+        text-shadow: 0px 6px 8px #000000;
         @include respond(phone) {
             font-size: 2.2rem;
-            padding-right: 2rem;
         }
     }
 
@@ -65,9 +42,62 @@ body {
         display: block;
         font-size: 2rem;
         padding-right: 4rem;
+        text-shadow: 0px 6px 8px #000000;
+    }
+}
+
+// Heading Boxes
+.heading {
+    &-1,
+    &-2 {
+        @include clipPath(0, 0, 100%, 0, 95%, 100%, 0, 100%);
+        align-items: center;        
+        background-color: #1f1f1f;
+        border-radius: 3px;
+        display: flex;
+        justify-content: flex-end;
+        position: relative;
+        height: 90px;
+        transition: all .5s;
+
+        &--icon {
+            padding-right: 2rem;
+            display: block;
+            height: 75px; 
+            filter: drop-shadow(0px 6px 8px #000);
+        }
+    }
+
+    &-1 {
+        max-width: 450px;
+        text-shadow: 0px 6px 8px #2e2e2e;
+        text-transform: capitalize;
+
+        @include respond(tablet-mid) {
+            max-width: 425px;
+        }
 
         @include respond(phone) {
-            padding-right: 2rem;
+            max-width: 310px;
+        }
+    }
+
+
+    &-2 {
+        margin-bottom: 3rem;
+        max-width: 400px;
+
+        @include respond(tablet-portrait) {
+            max-width: 300px;
+        }
+
+        @include respond(phone) {
+            max-width: 280px;
+        }
+
+        @include respond(smaller-phone) {
+            // margin-bottom: 3rem;
+            max-width: 250px;
         }
     }
 }
