--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -145,9 +145,10 @@ body {
   animation-timing-function: ease-in-out; }
 
 .spinner {
-  background-color: rgba(0, 0, 0, 0.24);
+  position: fixed;
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+  z-index: 100; }
 
 .spinner::before {
   content: "";
@@ -162,7 +163,7 @@ body {
   border-radius: 50%;
   border-top: 4.5px solid #76bb3e;
   border-right: 4.5px solid transparent;
-  animation: loadingSpinner .8s linear infinite;
+  animation: loadingSpinner .6s linear infinite;
   z-index: 10; }
   @media only screen and (max-width: 37.5em) {
     .spinner::before {
@@ -175,11 +176,6 @@ body {
   animation-name: monsterHeaderWidth;
   animation-duration: .5s;
   animation-timing-function: ease-in-out; }
-
-.loading {
-  background-color: rgba(0, 0, 0, 0.7) !important;
-  position: absolute;
-  z-index: 9; }
 
 .locales {
   position: relative; }
@@ -211,39 +207,40 @@ body {
         grid-template-columns: repeat(1, 1fr); } }
   .locales__name {
     font-size: 1.8rem;
-    padding-bottom: 1rem;
-    text-align: center; }
+    padding-top: 1rem;
+    text-align: center;
+    color: #fff;
+    text-transform: capitalize; }
   .locales__img {
     border: 2px solid transparent;
     display: block;
     width: 100% !important;
     transition: all .2s; }
-    .locales__img:hover {
-      cursor: pointer;
-      border: 2px solid #76bb3e; }
 
-.modal-container {
+.modal {
   background-color: rgba(0, 0, 0, 0.85);
   display: none;
   position: fixed;
   width: 100%;
   height: 100vh;
-  z-index: 10000000; }
-  .modal-container__toggle {
+  z-index: 1000000; }
+  .modal__toggle {
     font-size: 3.8rem;
     position: fixed;
     top: 0;
     right: 10rem;
     z-index: 10000; }
     @media only screen and (max-width: 56.25em) {
-      .modal-container__toggle {
+      .modal__toggle {
+        top: -5rem;
         right: 1rem; } }
-    .modal-container__toggle--icon {
+    .modal__toggle--icon {
       color: #77dd76;
+      font-style: inherit;
       text-shadow: 0px 5px 10px #000; }
-    .modal-container__toggle:hover {
+    .modal__toggle:hover {
       cursor: pointer; }
-  .modal-container__content {
+  .modal__content {
     margin: 0 auto;
     display: block;
     position: absolute;
@@ -252,14 +249,36 @@ body {
     transform: translate(-50%, -50%);
     width: 100%    !important;
     height: auto   !important; }
-  .modal-container__img {
+  .modal__img {
+    padding: 2rem;
     margin: 0 auto;
     width: 70% !important;
     height: auto !important;
     display: block; }
     @media only screen and (max-width: 56.25em) {
-      .modal-container__img {
+      .modal__img {
         width: 100% !important; } }
+  .modal__error {
+    background-color: #222;
+    border-radius: .2rem;
+    color: #fff;
+    font-size: 1.8rem;
+    position: fixed;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 3rem 2.5rem;
+    z-index: 10000; }
+  .modal__button {
+    background-color: #fff;
+    border: none;
+    border-radius: 2rem;
+    cursor: pointer;
+    font-size: 1.6rem;
+    padding: .6rem 2rem;
+    outline: none;
+    margin-top: 2rem; }
 
 .monster {
   position: relative; }
@@ -296,7 +315,6 @@ body {
       padding: 0 1rem; } }
   .monster__info {
     display: block;
-    padding: 0 2rem;
     z-index: 2; }
     @media only screen and (max-width: 56.25em) {
       .monster__info {
@@ -310,13 +328,22 @@ body {
       color: #76bb3e; }
     .monster__desc:not(:last-child) {
       margin-bottom: 2rem; }
+  .monster__legend {
+    color: #fff;
+    display: grid;
+    font-size: 1.4rem;
+    grid-template-columns: repeat(2, 1fr); }
+    @media only screen and (max-width: 56.25em) {
+      .monster__legend {
+        grid-template-columns: repeat(1, 1fr); } }
   .monster__grid-attributes {
     color: #fff;
     display: grid;
     font-size: 1.7rem;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 2rem;
-    grid-column-gap: 1rem; }
+    grid-column-gap: 1rem;
+    margin-bottom: 3rem; }
   .monster__list {
     list-style: none;
     text-transform: capitalize; }
@@ -353,7 +380,7 @@ body {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: .7;
+    opacity: .75;
     transition: all .3s; }
     @media only screen and (max-width: 56.25em) {
       .header::after {
