--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -17,9 +17,11 @@
 }
 
 .spinner {
-    background-color: rgba(0, 0, 0, 0.24);
+    // display: none;
+    position: fixed;
     height: 100vh;
     width: 100%;
+    z-index: 100;
 }
 
 .spinner::before {
@@ -35,7 +37,7 @@
     border-radius: 50%;
     border-top: 4.5px solid $primary-color;
     border-right: 4.5px solid transparent;
-    animation: loadingSpinner .8s linear infinite;
+    animation: loadingSpinner .6s linear infinite;
     z-index: 10;
 
     @include respond(phone) {
@@ -51,10 +53,4 @@
     animation-name: monsterHeaderWidth;
     animation-duration: .5s;
     animation-timing-function: ease-in-out;
-}
-
-.loading {
-    background-color: rgba(0, 0, 0, .7) !important;
-    position: absolute;
-    z-index: 9;
 }
