--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,25 +1,29 @@
-.modal-container {
+.modal {
     background-color:rgba(0,0,0,0.85);
     display: none;
     position: fixed;
     width: 100%;
     height: 100vh;
-    z-index: 10000000;
+    z-index: 1000000;
 
+
+    // Modal Content
     &__toggle {
         font-size: 3.8rem;
+        
         position: fixed;
         top: 0;
         right: 10rem;
         z-index: 10000;
 
         @include respond(tablet-portrait) {
-            // top: -5rem;
+            top: -5rem;
             right: 1rem;
         }
 
         &--icon {
             color: $primary-color-light;
+            font-style: inherit;
             text-shadow: 0px 5px 10px #000;
         }
 
@@ -29,7 +33,6 @@
     }
 
     &__content {
-        // background-color: #000;
         margin: 0 auto;
         display: block;
         position: absolute;
@@ -41,6 +44,7 @@
     }
 
     &__img {
+        padding: 2rem;
         margin: 0 auto;
         width: 70% !important;
         height: auto !important;
@@ -50,4 +54,43 @@
             width: 100% !important;
         }
     }
+
+
+    // Error Message
+    &__error {
+        background-color: #222;
+        border-radius: .2rem;
+        color: #fff;
+        font-size: 1.8rem;
+
+        position: fixed;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        padding: 3rem 2.5rem;
+        z-index: 10000;
+    }
+
+    &__button {
+        background-color: #fff;
+        border: none;
+        border-radius: 2rem;
+        cursor: pointer;
+        font-size: 1.6rem;
+        padding: .6rem 2rem;
+        outline: none;
+        margin-top: 2rem;
+    }
 }
+
+
+
+
+
+
+
+
+
+
