--- a/sass/components/_monster.scss
+++ b/sass/components/_monster.scss
@@ -36,7 +36,7 @@
 
     &__info {
         display: block;
-        padding: 0 2rem;
+        // padding: 0 2rem;
         z-index: 2;
 
         @include respond(tablet-portrait) {
@@ -59,6 +59,18 @@
         }
     }
 
+    &__legend {
+        color: #fff;
+        display: grid;
+        font-size: 1.4rem;
+        grid-template-columns: repeat(2, 1fr);
+
+        @include respond(tablet-portrait) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+
     &__grid-attributes {
         color: #fff;
         display: grid;
@@ -66,6 +78,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 2rem;
         grid-column-gap: 1rem;
+        margin-bottom: 3rem;
     }
 
     &__list {
